--- a/mailblast22/mailblast.css
+++ b/mailblast22/mailblast.css
@@ -8,16 +8,17 @@ body{
   float:left;
   width:100%;
   height:40px;
-  background-color: #7F5283;
+  background-color: rgba(0,0,0,.3);
   box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset, rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 }
 .header_appname{
   float:left;
   width:auto;
   height:auto;
-  margin-top: 8px;
+  margin-top: 10px;
   margin-left: 10px;
-  font-size: 20px;
+  margin-right: 10px;
+  font-size: 15px;
 }
 .dashboard_header{
   display:inline-block;
@@ -29,18 +30,20 @@ body{
   border-radius: 5px;
   overflow: hidden;
   background-color: rgba(0,0,0,.1);
+  transition: all 0.5s;
 }
 .dashboard_navigation_container{
   display:inline-block;
-  height: auto;
+  max-height:137px;
   position: fixed;
   top:130px;
   bottom: auto;
   left: 20px;
   right: 20px;
   border-radius: 5px;
-  overflow-y: scroll;
+  overflow-y: auto;
   background-color: rgba(0,0,0,.5);
+  transition: all 0.5s;
 }
 
 .dashboard{
@@ -51,14 +54,9 @@ body{
   left: 20px;
   right: 20px;
   border-radius: 5px;
-  overflow: hidden;
+  overflow: auto;
   background-color: rgba(0,0,0,.5);
-}
-
-@media (orientation: portrait) {
-  .dashboard{
-    top:275px;
-  }
+  transition: all 0.5s;
 }
 
 .dashboard_header_title{
@@ -113,4 +111,301 @@ body{
   border-radius:5px;
   margin-bottom: 5px;
   font-size: 12px;
+}
+
+.dashboard_title{
+  float:left;
+  width:calc(100% - 40px);
+  height:auto;
+  padding-bottom: 10px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 5x;
+  margin-top: 20px;
+  border-bottom:solid 1px white;
+}
+.dashboard_title_da{
+  float:left;
+  width:auto;
+  height:auto;
+  margin-top: 7px;
+}
+.dashboard_title button{
+  float:right;
+  width:auto;
+  height:auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 12px;
+  background-color: darkgreen;
+  color:white;
+  border: solid 0px white;
+  border-radius: 2px;
+  cursor:pointer;
+}
+.dashboard table{
+  float:left;
+  width:calc(100% - 40px);
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-collapse: collapse;
+  font-size: 12px;
+}
+
+.dashboard td, .dashboard th {
+  border: 1px solid rgba(0,0,0,0);
+  padding: 5px;
+  text-align:center;
+  overflow-x: auto;
+}
+
+.dashboard th{
+  background-color: rgba(255,255,255,.8);
+  color: black;
+  border: 1px solid rgba(0,0,0,0);
+  border-radius:5px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 15px;
+}
+
+.dashboard tr:nth-child(even){
+  background-color: rgba(255,255,255,.05);
+}
+.control_delete{
+  display:inline-block;
+  border: solid 0px white;
+  height:auto;
+  width: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  color: white;
+  border-radius:2px;
+  cursor:pointer;
+  background-color: darkred;
+  font-size: 12px;
+}
+.blastbtn{
+  float:left;
+  width:calc(100% - 40px);
+  height:auto;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  text-align: right;
+}
+.blastbtn button{
+  display:inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  cursor:pointer;
+  background-color: orange;
+  border: solid 0px white;
+  border-radius: 5px;
+}
+
+.msg{
+  position: fixed;
+  width:auto;
+  height:auto;
+  top:0px;
+  bottom:0px;
+  left:0px;
+  right:0px;
+  background-color: rgba(0,0,0,.5);
+  backdrop-filter: blur(5px);
+  transition: all 0.5s;
+  z-index: 1000;
+}
+.msg_core{
+  position: fixed;
+  width:200px;
+  min-height:150px;
+  top:calc(50% - 100px);
+  left:calc(50% - 100px);
+  right:calc(50% - 100px);
+  background-color: rgba(255,255,255,.9);
+  border-radius:10px;
+  color: #2C3333;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  transition: all 0.5s;
+}
+.msg_core_logo{
+  float:left;
+  width:100%;
+  height:auto;
+  text-align:center;
+  padding-top: 20px;
+  padding-bottom: 5px;
+}
+.msg_core_text{
+  float:left;
+  width: calc(100% - 20px);
+  margin-left: 10px;
+  margin-right: 10px;
+  height:auto;
+  text-align: center;
+  font-size: 12px;
+}
+.msg_core_button{
+  float:left;
+  width:100%;
+  height:auto;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.msg_core_button button{
+  display:inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 12px;
+  background-color: #3D3C42;
+  color: white;
+  border: solid 0px white;
+  border-radius: 5px;
+  cursor:pointer;
+}
+
+.form{
+  position: fixed;
+  width:auto;
+  height:auto;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  background-color: rgba(0,0,0,.5);
+  backdrop-filter: blur(5px);
+  transition: all 0.5s;
+  overflow: hidden;
+  font-size: 12px;
+}
+.form_core{
+  position: fixed;
+  width:80%;
+  height:auto;
+  top:20px;
+  bottom:20px;
+  left:10%;
+  right:10%;
+  background-color: rgba(255,255,255,.9);
+  border-radius: 10px;
+  color: black;
+  transition: all 0.5s;
+}
+.form_core_header{
+  float:left;
+  width:calc(100% - 40px);
+  height:28px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: solid 2px black;
+}
+.form_core_header_title{
+  float:left;
+  width: auto;
+  height:auto;
+  font-size: 20px;
+  margin-top: 5px;
+}
+.form_core_header_button{
+  float:right;
+  width: auto;
+  height:auto;
+  margin-top: 5px;
+}
+.form_core_header_button button{
+  float:left;
+  width:auto;
+  height:auto;
+  border: solid 0px white;
+  font-size: 20px;
+  background-color: rgba(0,0,0,0);
+  cursor:pointer;
+}
+.form_core_tablecontainer{
+  float:left;
+  width:calc(100% - 40px);
+  height:calc(100% - 70px);
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  overflow: auto;
+}
+.form_core_tablecontainer table{
+  width:100%;
+  height:auto;
+}
+
+.form_core_tablecontainer td, .form_core_tablecontainer th {
+  border: 1px solid rgba(0,0,0,0);
+  padding: 5px;
+  text-align:center;
+  overflow-x: auto;
+}
+
+.form_core_tablecontainer tr:nth-child(even){
+  background-color: rgba(0,0,0,.05);
+}
+.form_core_table_add{
+  display: inline-block;
+  width:auto;
+  height:auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: black;
+  border-radius: 5px;
+  color:white;
+  border: solid 0px white;
+  cursor: pointer;
+}
+.table_search_input{
+  float:left;
+  width:calc(100% - 92px);
+  height:auto;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 20px 0px 0px 20px;
+  border-bottom: solid 2px black;
+  border-top: solid 2px black;
+  border-left: solid 2px black;
+  border-right: solid 0px black;
+  font-size: 12px;
+  background-color: rgba(255,255,255,0);
+}
+.table_search_button{
+  float:left;
+  width:50px;
+  height:auto;
+  background-color: black;
+  border-radius: 0px 20px 20px 0px;
+  border: solid 1px black;
+  color: white;
+  padding-top: 5px;
+  padding-bottom: 2px;
+  cursor: pointer;
+}
+
+@media (orientation: portrait) {
+  .dashboard{
+    top:275px;
+  }
 }
