--- a/filter/filter.css
+++ b/filter/filter.css
@@ -58,3 +58,45 @@ button.collapsed .bi-chevron-up,
 .filterloading{
 	animation: 1s ease-out 0s 1 slideInFromTop;
 }
+
+/*FILTER CHECKMARK*/
+
+#filterdiv .form-check {
+	font-size: 90%;
+	margin-bottom: .25rem;
+}
+
+#filterdiv .form-check label.checkmark {
+	position: absolute;
+	width: 11px;
+	height: 11px;
+	border-radius: 100%;
+	background-color: #ebecec;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 0;
+	z-index: 100;
+}
+
+#filterdiv .form-check input {
+	display: none;
+}
+
+#filterdiv .form-check input:checked ~ .checkmark {
+	background-color: #999!important;
+}
+
+#filterdiv .form-check label {
+	cursor: pointer;
+}
+
+/*Add To Cart*/
+.modal.fade .modal-dialog {
+	transform: scale(.5);
+}
+.modal.fade.show .modal-dialog {
+	transform: scale(1);
+}
+@media(min-width: 1200px) {
+	.modal {font-size: 16px;}
+}
